<resources>
    <string name="app_name">Quiz X</string>
    <string name="app_tagline">Do you know your X?</string>
    <string name="button_start">Start Quiz!</string>
    <string name="submit">Submit</string>
    <string name="hint_text">Enter answer here...</string>

    <!--Questions-->
    <string name="question_img_1">Which famous tech company\'s logo is this?</string>
    <string name="question_text_1">Which country won the Fifa World Cup in 2014?</string>

    <!--Options-->
    <string name="option_USA">USA</string>
    <string name="option_Brazil">Brazil</string>
    <string name="option_Argentina">Argentina</string>
    <string name="option_Germany">Germany</string>

    <!--Answers-->
    <string name="answer_img_1">google</string>
</resources>
