<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wisc.ganz.quizx.TextQuestionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_text_1"
        android:id="@+id/tv_TextQuestion"
        android:textSize="20dp"
        android:layout_gravity="top"
        android:paddingTop="10dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_radio_group"
            android:layout_below="@+id/tv_TextQuestion"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingTop="25dp">
            <RadioButton android:id="@+id/radio_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_USA"/>
            <RadioButton android:id="@+id/radio_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_Brazil"/>
            <RadioButton android:id="@+id/radio_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_Argentina"/>
            <RadioButton android:id="@+id/radio_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_Germany" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/text_submit_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</FrameLayout>
