<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.wisc.ganz.quizx.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tagline"
        android:text="@string/app_tagline"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="25dp"
        android:textSize="18dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/lightLightGrey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/tv_appName"
        android:layout_above="@+id/tv_tagline"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="startPressed"
        />
</RelativeLayout>
